@@ -1,3 +1,3 @@
 AUX 001-fix_library_install_paths.patch 1309 RMD160 7c98155a9cd452a53d07797f31d53a0e8d241179 SHA1 a41d5f52c19bbbbae12be28c5d84fe56922a71eb SHA256 0faf538e8b0dfb492101a49e39a1a9308b8b00ad303af4d17ba709a76185a19d
-EBUILD yukon-9999.ebuild 1088 RMD160 02f9e64fa6daeb863e94ebd5ef790c17d5d066ec SHA1 080b883ea2d64877f22525bc9f7566ab5a4d8a33 SHA256 a1400774be2da5e11fef739855f30bce6076a93c5a56fe1d0c242394e858ba61
-MISC ChangeLog 336 RMD160 4dea30c2aef213d6bd9a8164842a5243bcc5f41b SHA1 9aa15713611c456bb025f6b0b177e935d434b368 SHA256 cc3b3ea53bcf269c4032faabd90bce1c5e5a6daa25e8828b0cb222440f507180
+EBUILD yukon-9999.ebuild 1077 RMD160 4f116de88ec2f545f50aa693dcdd505f5be5975b SHA1 1aa88593eeeb336fe5c3f10dce45ddcb7f5e152e SHA256 2ef814d7a803f2c8802bf02707756e5f604f48ca1d5c25621434848390e62eb4
+MISC ChangeLog 646 RMD160 7c395bb6f7bbb9a030a93caf6c6bbf00034eeb87 SHA1 f7a085b4b298fe47c85ce43319d689ca2c7271ac SHA256 894f1dded4a3f9f3124c14cd2e2fa3b22ff36625098bcb5d3f7c23dc278313b9
