@@ -3,6 +3,9 @@
 # $Header: $
 
   07 Mar 2010; Anna Gabutero <amdg@lavabit.com> yukon-9999.ebuild:
+  Tweaking mplayer configuration info message
+
+  07 Mar 2010; Anna Gabutero <amdg@lavabit.com> yukon-9999.ebuild:
   Place default configuration file in the documented location
   (https://devel.neopsis.com/projects/yukon/wiki/HowTo/Configure)
 
